--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Cool Font and Background with Day of the Week in Swedish</title>
+    <title>Vad är det för dag?</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
