--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Vad är det för dag?</title>
+    <title>Vad är det för dag och klockan?</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1 id="day-of-week"></h1>
+    <h1 id="day-of-week-time"></h1>
+    <h2 id="weather"></h2>
   </body>
   <script src="script.js"></script>
 </html>
