--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" type="image/png" href="ikon.ico">
     <meta charset="UTF-8">
-    <title>Vad är det för dag och klockan?</title>
+    <title>Vaddag</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
