--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" type="image/png" href="favicon.svg">
+    <link rel="icon" type="image/png" href="img/favicon.svg">
     <meta charset="UTF-8">
     <title>Vaddag</title>
     <link rel="stylesheet" type="text/css" href="style.css">
